[package]
name = "servedir"
version = "0.1.0"
authors = ["Stephane Raux <stephaneyfx@gmail.com>"]
edition = "2018"
description = "Tool to serve a directory over HTTP"
license = "MIT"
homepage = "https://github.com/stephaneyfx/servedir"
repository = "https://github.com/stephaneyfx/servedir.git"
keywords = ["http", "directory", "file", "server"]

[dependencies]
clap = "2.32.0"
ctrlc = {version = "3.1.1", features = ["termination"]}
futures = "0.1.25"
http = "0.1.15"
hyper = "0.12.24"
mime = "0.3.13"
nestxml = "0.2.0"
number_prefix = "0.2.8"
percent-encoding = "1.0.1"
tokio-codec = "0.1.1"
tokio-fs = "0.1.5"
xml-rs = "0.8.0"
